force-app/main/default/objects/Account/fields/A_Global_Picklist__c.field-meta.xml
<CustomField>
    <fullName>A_Global_Picklist__c</fullName>
    <description>A global picklist</description>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>