force-app/main/default/objects/Account/fields/A_Non_Existing_Global_Picklist__c.field-meta.xml
<CustomField>
    <fullName>A_Non_Existing_Global_Picklist__c</fullName>
    <description>A non existing global picklist</description>
    <label>Does not exist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Picklist_that_does_not_exist__c</valueSetName>
    </valueSet>
</CustomField>