force-app/main/default/objects/Account/fields/A_Picklist__c.field-meta.xml
<CustomField>
    <fullName>A_Picklist__c</fullName>
    <description>This is a Picklist with given values</description>
    <label>ABC Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A Customer</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B Customer</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>