force-app/main/default/objects/Account/fields/Required_Field__c.field-meta.xml
<CustomField>
    <fullName>A name</fullName>
    <required>true</required>
</CustomField>