force-app/main/default/objects/Account/recordTypes/A_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>dm_Account_Partner</fullName>
    <active>true</active>
    <description>Account for partner roles only</description>
    <label>Account - Partner</label>
</RecordType>